Restore rabbit.host and add an haproxy rabbit listener
To balance load over the rabbit cluster we want to route access
to it via haproxy.

This also helps workaround bug #856764 as an additional benefit.

This change sets rabbit.host to the ControlVirtualIP (to be used by
the elements) and adds an haproxy listener for the rabbit nodes.

Related to blueprint tripleo-icehouse-ha-production-configuration
Depends on I3ff37ec18b9191ca8e861519bed142cbdbd5faa2

Change-Id: I49b622a604542f456bd9a37da8dae3353218e640
Related-Bug: 856764

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -77,6 +77,8 @@ parameters:
     default: ''
     description: A port to add to the NeutronPhysicalBridge.
     type: string
+  RabbitHost:
+    type: string
   RabbitUserName:
     type: string
   RabbitPassword:
@@ -216,6 +218,7 @@ resources:
         neutron_public_interface: {get_param: NeutronPublicInterface}
         neutron_password: {get_param: NeutronPassword}
         admin_password: {get_param: AdminPassword}
+        rabbit_host: {get_param: RabbitHost}
         rabbit_username: {get_param: RabbitUserName}
         rabbit_password: {get_param: RabbitPassword}
         live_update_host: {get_param: LiveUpdateHost}
