--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -321,6 +321,7 @@ resources:
         KeystoneHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         NeutronHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         GlanceHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
+        RabbitHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         NovaDSN: {list_join: ['', ['mysql://nova:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}, '/nova']]}
         CeilometerDSN: {list_join: ['', ['mysql://ceilometer:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}, '/ceilometer']]}
         NeutronDSN: {list_join: ['', ['mysql://neutron:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}, '/ovs_neutron']]}
@@ -487,6 +488,7 @@ resources:
           service-password:
             get_param: NovaPassword
         rabbit:
+          host: {get_input: controller_virtual_ip}
           username:
             get_param: RabbitUserName
           password:
@@ -591,6 +593,11 @@ resources:
             - name: swift_proxy_server
               port: 8080
               net_binds: *public_binds
+            - name: rabbitmq
+              port: 5672
+              options:
+                - timeout client 0
+                - timeout server 0
   controllerPassthrough:
     type: OS::Heat::StructuredConfig
     properties:
