--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -40,6 +40,7 @@ resources:
           service-password: {get_input: neutron_password}
         admin-password: {get_input: admin_password}
         rabbit:
+          host: {get_input: rabbit_host}
           username: {get_input: rabbit_username}
           password: {get_input: rabbit_password}
         live-update:
