fix incorrect reference to rabbit_username
Fixes a typo in nova-compute-config.yaml file where rabbit_username
was mistakenly written as rabbit_user_name; compute nodes received
null as rabbit username as consequence.

Change-Id: I796b9bdccd1863647a667edbbc96731fc924c55d

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -40,7 +40,7 @@ resources:
           service-password: {get_input: neutron_password}
         admin-password: {get_input: admin_password}
         rabbit:
-          username: {get_input: rabbit_user_name}
+          username: {get_input: rabbit_username}
           password: {get_input: rabbit_password}
         live-update:
           host: {get_input: live_update_host}
