Rename NovaCompute resources suffix to be consistent with controller
This change renames a few NovaCompute resources so that the naming
is consistent with the controller resources naming choice.

Change-Id: I8c22867b208c5e16fd52bb3157f838f762b71470

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -312,10 +312,10 @@ resources:
       length: 20
       salt:
         get_param: RabbitCookieSalt
-  NovaCompute0Deploy:
+  NovaCompute0Deployment:
     type: FileInclude
     Path: nova-compute-instance.yaml
-    SubKey: resources.NovaCompute0Deploy
+    SubKey: resources.NovaCompute0Deployment
     parameters:
         NovaApiHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         KeystoneHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
@@ -335,10 +335,10 @@ resources:
             get_param: HypervisorNeutronPublicInterface
         NeutronBridgeMappings:
             get_param: NeutronBridgeMappings
-  NovaCompute0AllNodes:
+  NovaCompute0AllNodesDeployment:
     type: FileInclude
     Path: nova-compute-instance.yaml
-    SubKey: resources.NovaCompute0AllNodesDeploy
+    SubKey: resources.NovaCompute0AllNodesDeployment
     parameters:
         AllNodesConfig: {get_resource: allNodesConfig}
   NovaCompute0Passthrough:
@@ -610,7 +610,7 @@ resources:
       networks:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
-  controller0AllNodes:
+  controller0AllNodesDeployment:
     depends_on: [controller0Deployment,controller0SSLDeployment,controller0Swift,controller0Passthrough]
     type: OS::Heat::StructuredDeployment
     properties:
