Parameterize network type and tunnel types
Remove the hardcoding of gre as the Neutron tenant network type for the
Overcloud. This will enable the ability to deploy an Overcloud that uses
vxlan instead of gre tunnels. A new parameter, NeutronTunnelTypes, is
added to allow configuring the tunnel_types parameter in the Neutron ML2
configuration.

This change is required by https://review.openstack.org/#/c/92913

Change-Id: I2c2e2153a61349e58ada28c87aa2338c9f00e7bd

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -84,6 +84,16 @@ parameters:
     default: ''
     description: A port to add to the NeutronPhysicalBridge.
     type: string
+  NeutronNetworkType:
+    default: 'gre'
+    description: The tenant network type for Neutron, either gre or vxlan.
+    type: string
+  NeutronTunnelTypes:
+    default: 'gre'
+    description: |
+        The tunnel types for the Neutron tenant network. To specify multiple
+        values, use a comma separated string, like so: 'gre,vxlan'
+    type: string
   RabbitHost:
     type: string
   RabbitUserName:
@@ -227,6 +237,7 @@ resources:
         neutron_dsn: {get_param: NeutronDSN}
         neutron_local_ip: {get_attr: [NovaCompute0, networks, ctlplane, 0]}
         neutron_tenant_network_type: {get_param: NeutronNetworkType}
+        neutron_tunnel_types: {get_param: NeutronTunnelTypes}
         neutron_network_vlan_ranges: {get_param: NeutronNetworkVLANRanges}
         neutron_bridge_mappings: {get_param: NeutronBridgeMappings}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
