--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -38,6 +38,7 @@ resources:
           ovs:
             local_ip: {get_input: neutron_local_ip}
             tenant_network_type: {get_input: neutron_tenant_network_type}
+            tunnel_types: {get_input: neutron_tunnel_types}
             network_vlan_ranges: {get_input: neutron_network_vlan_ranges}
             bridge_mappings: {get_input: neutron_bridge_mappings}
             enable_tunneling: {get_input: neutron_enable_tunneling}
