--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -668,6 +668,30 @@ resources:
             - list_join:
               - "\n"
               - Merge::Map:
+                  BlockStorage0:
+                    list_join:
+                    - ' '
+                    - - {get_attr: [BlockStorage0, networks, ctlplane, 0]}
+                      - {get_attr: [BlockStorage0, show, name]}
+                      - list_join:
+                        - '.'
+                        - - {get_attr: [BlockStorage0, show, name]}
+                          - 'novalocal'
+            - list_join:
+              - "\n"
+              - Merge::Map:
+                  SwiftStorage0:
+                    list_join:
+                    - ' '
+                    - - {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
+                      - {get_attr: [SwiftStorage0, show, name]}
+                      - list_join:
+                        - '.'
+                        - - {get_attr: [SwiftStorage0, show, name]}
+                          - 'novalocal'
+            - list_join:
+              - "\n"
+              - Merge::Map:
                   controller0:
                     list_join:
                     - ' '
