Ensure glance.host and glance.cinder are set for BlockStorage nodes
Change-Id: I03056681b795a2078a678dcb0cd29002310e5843
Related-bug: 1351110

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -46,3 +46,6 @@ resources:
           host: {get_input: controller_virtual_ip}
           username: {get_param: RabbitUserName}
           password: {get_param: RabbitPassword}
+        glance:
+          host: {get_input: controller_virtual_ip}
+          port: {get_param: GlancePort}
