Fix overcloud controller scaling
Controller scaling was broken by the commit
02772ba2877b9f6d427c6fd760bf19d6334c68a8. Merge.py raises an exception
when it tries to scale the default value "controller0" of the
`BootstrapNodeResource` parameter.

This reverts back to using Fn::Select for specifying the bootstrap host,
the rest of the Fn::Select -> get_attr changes are kept.

Change-Id: I0cdebf75d4752a35f547d4fbb81545ece3172405

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -283,10 +283,6 @@ parameters:
     description: Keystone key for signing tokens.
     type: string
     hidden: true
-  BootstrapNodeResource:
-    default: controller0
-    description: Name of the bootstrap controller resource
-    type: string
 resources:
   ControlVirtualIP:
     type: OS::Neutron::Port
@@ -364,7 +360,18 @@ resources:
           public_interface_ip:
             get_param: NeutronPublicInterfaceIP
         bootstrap_host:
-          bootstrap_nodeid: {get_attr: [{get_param: BootstrapNodeResource}, show, name]}
+          bootstrap_nodeid:
+            Fn::Select:
+            - 0
+            - Fn::Select:
+              - 0
+              - Merge::Map:
+                  controller0:
+                  - Fn::Select:
+                    - name
+                    - get_attr:
+                      - controller0
+                      - show
           nodeid: {get_input: bootstack_nodeid}
         cinder:
           db: mysql://cinder:unset@localhost/cinder
