--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -198,7 +198,18 @@ resources:
         admin-token:
           get_param: AdminToken
         bootstrap_host:
-          bootstrap_nodeid: {get_attr: [undercloud, show, name]}
+          bootstrap_nodeid:
+            Fn::Select:
+            - 0
+            - Fn::Select:
+              - 0
+              - Merge::Map:
+                  undercloud:
+                  - Fn::Select:
+                    - name
+                    - get_attr:
+                      - undercloud
+                      - show
           nodeid: {get_input: bootstack_nodeid}
         bootstack:
           public_interface_ip:
