Make turning debug on globally easy.
We can obviously use passthrough for this, but I rather suspect that
OMFG something is broken get me debug will be a common phrase.

Change-Id: I62539630a4737bbbe6883ed71929f38c819ceed4

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -29,6 +29,10 @@ parameters:
     description: The password for the ceilometer service account.
     type: string
     hidden: true
+  Debug:
+    default: ''
+    description: Set to True to enable debugging on all services.
+    type: string
   SnmpdReadonlyUserName:
     default: ro_snmp_user
     description: The user name for SNMPd with readonly rights running on all Overcloud nodes
@@ -229,6 +233,7 @@ resources:
           quorum_policy : ignore
         ceilometer:
           db: mysql://ceilometer:unset@localhost/ceilometer
+          debug: {get_param: Debug}
           metering_secret: {get_param: CeilometerMeteringSecret}
           snmpd_readonly_user_name:
             get_param: SnmpdReadonlyUserName
@@ -240,6 +245,7 @@ resources:
         glance:
           backend: file
           db: mysql://glance:unset@localhost/glance
+          debug: {get_param: Debug}
           host: 127.0.0.1
           port:
             get_param: GlancePort
@@ -258,12 +264,14 @@ resources:
           admin_user: heat
           auth_encryption_key: unset___________
           db: mysql://heat:unset@localhost/heat
+          debug: {get_param: Debug}
           stack_domain_admin_password: {get_param: HeatStackDomainAdminPassword}
           watch_server_url: {get_input: heat.watch_server_url}
           metadata_server_url: {get_input: heat.metadata_server_url}
           waitcondition_server_url: {get_input: heat.waitcondition_server_url}
         keystone:
           db: mysql://keystone:unset@localhost/keystone
+          debug: {get_param: Debug}
           host: 127.0.0.1
           ca_certificate: {get_param: KeystoneCACertificate}
           signing_key: {get_param: KeystoneSigningKey}
@@ -271,6 +279,7 @@ resources:
         mysql:
           innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
         neutron:
+          debug: {get_param: Debug}
           host: 127.0.0.1
           ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
           ovs:
