--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -8,10 +8,12 @@ resources:
           compute_driver: { get_input: nova_compute_driver }
           compute_libvirt_type: { get_input: nova_compute_libvirt_type }
           db: {get_input: nova_dsn}
+          debug: {get_param: Debug}
           host: {get_input: nova_api_host}
           service-password: {get_input: nova_password}
         ceilometer:
           db: {get_input: ceilometer_dsn}
+          debug: {get_param: Debug}
           metering_secret: {get_input: ceilometer_metering_secret}
           service-password: {get_input: ceilometer_password}
           compute_agent: {get_input: ceilometer_compute_agent}
@@ -20,12 +22,15 @@ resources:
           readonly_user_name: {get_input: snmpd_readonly_user_name}
           readonly_user_password: {get_input: snmpd_readonly_user_password}
         glance:
+          debug: {get_param: Debug}
           host: {get_input: glance_host}
           port: {get_input: glance_port}
           protocol: {get_input: glance_protocol}
         keystone:
+          debug: {get_param: Debug}
           host: {get_input: keystone_host}
         neutron:
+          debug: {get_param: Debug}
           flat-networks: {get_input: neutron_flat_networks}
           host: {get_input: neutron_host}
           ovs_db: {get_input: neutron_dsn}
