--- a/undercloud-vm-ironic-config.yaml
+++ b/undercloud-vm-ironic-config.yaml
@@ -8,6 +8,7 @@ resources:
           compute_driver: ironic.nova.virt.ironic.driver.IronicDriver
           compute_manager: ironic.nova.compute.manager.ClusteredComputeManager
           db: mysql://nova:unset@localhost/nova
+          debug: {get_param: Debug}
           default_ephemeral_format: ext4
           host: 127.0.0.1
           metadata-proxy: false
