Switch to heat_template_version: 2013-05-23
To support underclouds and seeds running older than the very
latest heat.

2013-05-23 lacks function list_join, so this change reverts to
using the equivalent function Fn::Join.

Change-Id: I039f57ab39c1fcfc319a7a34265ba4fabf4ccd08
Closes-Bug: #1354305

--- a/base.yaml
+++ b/base.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 description: 'Tie OpenStack components together'
 parameters:
   TemplateRoot:
@@ -12,7 +12,7 @@ resources:
   RabbitMQ:
     type: AWS::CloudFormation::Stack
     TemplateURL:
-      list_join:
+      Fn::Join:
         - {get_param: TemplateRoot}
         - rabbitmq.yaml
     parameters:
@@ -22,7 +22,7 @@ resources:
   MySQL:
     type: AWS::CloudFormation::Stack
     TemplateURL:
-      list_join:
+      Fn::Join:
         - {get_param: TemplateRoot}
         - mysql.yaml
     parameters:
@@ -32,14 +32,14 @@ resources:
   Keystone:
     type: AWS::CloudFormation::Stack
     TemplateURL:
-      list_join:
+      Fn::Join:
         - {get_param: TemplateRoot}
         - keystone.yaml
     parameters:
       AdminToken: {get_param: KeystoneAdminToken}
       KeyName: default
       KeystoneDSN:
-        list_join:
+        Fn::Join:
           - 'mysql://keystone:'
           - {get_attr: [ MySQL , KeystonePassword ]}
           - '@'
@@ -48,13 +48,13 @@ resources:
   Glance:
     type: AWS::CloudFormation::Stack
     TemplateURL:
-      list_join:
+      Fn::Join:
         - {get_param: TemplateRoot}
         - glance.yaml
     parameters:
       KeyName: default
       HeatDSN:
-        list_join:
+        Fn::Join:
           - 'mysql://glance:'
           - {get_attr: [ MySQL, GlancePassword ] }
           - '@'
@@ -63,13 +63,13 @@ resources:
   Heat:
     type: AWS::CloudFormation::Stack
     TemplateURL:
-      list_join:
+      Fn::Join:
         - {get_param: TemplateRoot}
         - heat.yaml
     parameters:
       KeyName: default
       HeatDSN:
-        list_join:
+        Fn::Join:
           - 'mysql://heat:'
           - {get_attr: [ MySQL, HeatPassword ] }
           - '@'
