--- a/controller.yaml
+++ b/controller.yaml
@@ -1,6 +1,6 @@
 description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 parameters:
   AdminToken:
     type: string
@@ -130,7 +130,7 @@ resources:
             password: {get_param: NeutronDBPassword}
       glance:
         db:
-          list_join:
+          Fn::Join:
             - ''
             - - 'mysql://glance:'
               - {get_param: GlanceDBPassword}
@@ -141,7 +141,7 @@ resources:
             get_param: GlanceLogFile
       heat:
         db:
-          list_join:
+          Fn::Join:
             - ''
             - - 'mysql://heat:'
               - {get_param: HeatDBPassword}
@@ -168,14 +168,14 @@ resources:
         host:
           '127.0.0.1'
         db:
-          list_join:
+          Fn::Join:
             - ''
             - - 'mysql://keystone:'
               - {get_param: KeystoneDBPassword}
               - '@127.0.0.1/keystone'
       nova:
         db:
-          list_join:
+          Fn::Join:
             - ''
             - - 'mysql://nova:'
               - {get_param: NovaDBPassword}
@@ -184,7 +184,7 @@ resources:
         host:
           '127.0.0.1'
         ovs_db:
-          list_join:
+          Fn::Join:
             - ''
             - - 'mysql://neutron:'
               - {get_param: NeutronDBPassword}
