--- a/examples/source_hot.yaml
+++ b/examples/source_hot.yaml
@@ -13,4 +13,4 @@ resources:
     Path: examples/lib_hot.yaml
     SubKey: resources.GenericB
     parameters:
-      ImportantValue: {list_join: [ '', ['one', 'two', 'three']]}
+      ImportantValue: {"Fn::Join": [ '', ['one', 'two', 'three']]}
