--- a/nfs-server-source.yaml
+++ b/nfs-server-source.yaml
@@ -7,7 +7,7 @@ resources:
         shares:
           Merge::Map:
             NovaCompute0:
-              list_join:
+              Fn::Join:
               - ' '
               - - get_attr:
                   - NovaCompute0
@@ -15,7 +15,7 @@ resources:
                   - ctlplane
                   - 0
             BlockStorage0:
-              list_join:
+              Fn::Join:
               - ' '
               - - get_attr:
                   - BlockStorage0
