--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -1,6 +1,6 @@
 description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server,Group of Nova Computes
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 parameters:
   AdminPassword:
     default: unset
@@ -319,19 +319,19 @@ resources:
         GlanceHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         RabbitHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         NovaDSN:
-          list_join:
+          Fn::Join:
             - ''
             - - mysql://nova:unset@
               - &compute_database_host {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
               - /nova
         CeilometerDSN:
-          list_join:
+          Fn::Join:
             - ''
             - - mysql://ceilometer:unset@
               - *compute_database_host
               - /ceilometer
         NeutronDSN:
-          list_join:
+          Fn::Join:
             - ''
             - - mysql://neutron:unset@
               - *compute_database_host
@@ -394,7 +394,7 @@ resources:
             {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         cinder:
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://cinder:unset@
                 - *database_host
@@ -424,7 +424,7 @@ resources:
             host: {get_input: controller_virtual_ip}
           backend: swift
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://glance:unset@
                 - *database_host
@@ -451,7 +451,7 @@ resources:
           admin_user: heat
           auth_encryption_key: unset___________
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://heat:unset@
                 - *database_host
@@ -469,7 +469,7 @@ resources:
                     {get_attr: [controller0, show, name]}
         keystone:
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://keystone:unset@
                 - *database_host
@@ -487,7 +487,7 @@ resources:
               controller0:
                 ip: {get_attr: [controller0, networks, ctlplane, 0]}
           cluster_name:
-            list_join:
+            Fn::Join:
               - '-'
               - - 'tripleo'
                 - {get_resource: MysqlClusterUniquePart}
@@ -509,7 +509,7 @@ resources:
             physical_bridge: br-ex
             tenant_network_type: gre
           ovs_db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://neutron:unset@
                 - *database_host
@@ -520,7 +520,7 @@ resources:
             get_param: NeutronDnsmasqOptions
         ceilometer:
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://ceilometer:unset@
                 - *database_host
@@ -537,7 +537,7 @@ resources:
         nova:
           compute_driver: libvirt.LibvirtDriver
           db:
-            list_join:
+            Fn::Join:
               - ''
               - - mysql://nova:unset@
                 - *database_host
@@ -700,19 +700,19 @@ resources:
         controller_virtual_ip:
           {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         heat.watch_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
               - ':8003'
         heat.metadata_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
               - ':8000'
         heat.waitcondition_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
@@ -723,36 +723,36 @@ resources:
       config:
         completion-signal: {get_input: deploy_signal_id}
         hosts:
-          list_join:
+          Fn::Join:
           - "\n"
-          - - list_join:
+          - - Fn::Join:
               - "\n"
               - Merge::Map:
                   NovaCompute0:
-                    list_join:
+                    Fn::Join:
                     - ' '
                     - - {get_attr: [NovaCompute0, networks, ctlplane, 0]}
                       - {get_attr: [NovaCompute0, show, name]}
-                      - list_join:
+                      - Fn::Join:
                         - '.'
                         - - {get_attr: [NovaCompute0, show, name]}
                           - 'novalocal'
-            - list_join:
+            - Fn::Join:
               - "\n"
               - Merge::Map:
                   controller0:
-                    list_join:
+                    Fn::Join:
                     - ' '
                     - - {get_attr: [controller0, networks, ctlplane, 0]}
                       - {get_attr: [controller0, show, name]}
-                      - list_join:
+                      - Fn::Join:
                         - '.'
                         - - {get_attr: [controller0, show, name]}
                           - 'novalocal'
                       - {get_param: CloudName}
         rabbit:
           nodes:
-            list_join:
+            Fn::Join:
               - ','
               - Merge::Map:
                   controller0:
@@ -780,7 +780,7 @@ outputs:
   KeystoneURL:
     description: URL for the Overcloud Keystone service
     value:
-      list_join:
+      Fn::Join:
       - ''
       - - http://
         - {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
