--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 description: 'Common Swift Storage Configuration'
 parameters:
   SwiftStorageImage:
@@ -49,29 +49,29 @@ resources:
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
         swift_devices:
-          list_join:
+          Fn::Join:
           - ', '
           - Merge::Map:
               controller0:
-                list_join:
+                Fn::Join:
                 - ''
                 - - 'r1z1-'
                   - {get_attr: [controller0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
               SwiftStorage0:
-                list_join:
+                Fn::Join:
                 - ''
                 - - 'r1z1-'
                   - {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
         swift_proxy_memcache:
-          list_join:
+          Fn::Join:
             - ','
             - Merge::Map:
                 controller0:
-                  list_join:
+                  Fn::Join:
                     - ', '
-                    - - list_join:
+                    - - Fn::Join:
                         - ''
                         - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
