--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -1,5 +1,5 @@
 description: All-in-one baremetal OpenStack and all dependencies.
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 parameters:
   AdminPassword:
     default: unset
@@ -337,19 +337,19 @@ resources:
           - ctlplane
           - 0
         heat.watch_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - get_attr: [undercloud, networks, ctlplane, 0]
               - ':8003'
         heat.metadata_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - {get_attr: [undercloud, networks, ctlplane, 0]}
               - ':8000'
         heat.waitcondition_server_url:
-          list_join:
+          Fn::Join:
             - ''
             - - 'http://'
               - {get_attr: [undercloud, networks, ctlplane, 0]}
