--- a/block-storage-nfs.yaml
+++ b/block-storage-nfs.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 description: 'Common Block Storage Configuration'
 parameters:
   BlockStorageImage:
@@ -52,13 +52,13 @@ resources:
       keystone:
         host: {get_attr: [controller0, networks, ctlplane, 0]}
       cinder:
-        db: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
+        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           get_param: CinderPassword
         include_nfs_backend: 'true'
         nfs_shares:
-          - {list_join: ['', [{get_attr: [controller0, networks, ctlplane, 0]} , ':/mnt/state/var/lib/nfs_share']]}
+          - {"Fn::Join": ['', [{get_attr: [controller0, networks, ctlplane, 0]} , ':/mnt/state/var/lib/nfs_share']]}
       admin-password: {get_param: AdminPassword}
       rabbit:
         host: {get_attr: [controller0, networks, ctlplane, 0]}
