--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2014-10-16
+heat_template_version: 2013-05-23
 description: 'Common Block Storage Configuration'
 parameters:
   BlockStorageImage:
@@ -30,7 +30,7 @@ resources:
       config: {get_resource: BlockStorageConfig}
       input_values:
         controller_host: {get_attr: [controller0, networks, ctlplane, 0]}
-        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
+        cinder_dsn: {"Fn::Join": ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
         neutron_local_ip: {get_attr: [BlockStorage0 , networks, ctlplane, 0]}
       signal_transport: NO_SIGNAL
   BlockStorageConfig:
