Make signal_transport a parameter
There may be times where an update needs to change this without changing
the template, such as when updates will be done by something other than
Heat (i.e. Ansible).

Change-Id: I89d1153acab697b64468f841b3f2d17c169da649

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -170,6 +170,12 @@ parameters:
     type: string
     description: The image ID for live-updates to the overcloud compute nodes.
     default: ''
+  DefaultSignalTransport:
+    default: CFN_SIGNAL
+    description: Transport to use for software-config signals.
+    type: string
+    constraints:
+      - allowed_values: [ CFN_SIGNAL, HEAT_SIGNAL, NO_SIGNAL ]
 resources:
   NovaCompute0:
     type: OS::Nova::Server
@@ -232,6 +238,7 @@ resources:
     depends_on: [NovaCompute0Passthrough]
     type: OS::Heat::StructuredDeployment
     properties:
+      signal_transport: {get_param: DefaultSignalTransport}
       config: {get_param: AllNodesConfig}
       server: {get_resource: NovaCompute0}
   NovaCompute0Passthrough:
