--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -181,6 +181,12 @@ parameters:
     description: Keystone key for signing tokens.
     type: string
     hidden: true
+  DefaultSignalTransport:
+    default: CFN_SIGNAL
+    description: Transport to use for software-config signals.
+    type: string
+    constraints:
+      - allowed_values: [ CFN_SIGNAL, HEAT_SIGNAL, NO_SIGNAL ]
 resources:
   RabbitCookie:
     type: OS::Heat::RandomString
@@ -325,6 +331,7 @@ resources:
     properties:
       config: {get_resource: undercloudConfig}
       server: {get_resource: undercloud}
+      signal_transport: {get_param: DefaultSignalTransport}
       input_values:
         bootstack_nodeid:
           get_attr:
