Make Swift replica count configurable.
Using 1 is thoroughly non-HA :)

This is the HOT version of this patch.

Change-Id: Ic96bcdc03dacb9650520bd9ac1ce3805c6dac2fa
implements: blueprint tripleo-icehouse-ha-production-configuration

--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -10,6 +10,10 @@ parameters:
     description: The password for the swift service account, used by the swift proxy services.
     type: string
     hidden: true
+  SwiftReplicas:
+    type: number
+    default: 1
+    description: How many replicas to use in the swift rings.
 resources:
   controller0Swift:
     type: OS::Heat::StructuredDeployment
@@ -47,3 +51,4 @@ resources:
                         - ''
                         - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
+        swift_replicas: { get_param: SwiftReplicas}
