--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -4,6 +4,10 @@ parameters:
   SwiftStorageImage:
     type: string
     default: overcloud-swift-storage
+  SwiftReplicas:
+    type: number
+    default: 1
+    description: How many replicas to use in the swift rings.
   OvercloudSwiftStorageFlavor:
     default: baremetal
     description: Flavor for Swift storage nodes to request when deploying.
@@ -75,3 +79,4 @@ resources:
                         - ''
                         - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
+        swift_replicas: { get_param: SwiftReplicas}
