--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -9,7 +9,7 @@ resources:
           hash: { get_input: swift_hash_suffix }
           part-power: 10
           proxy-memcache: { get_input: swift_proxy_memcache }
-          replicas: 1
+          replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
         neutron:
           ovs:
