Add strict dependencies to the undercloud template
Currently there is very weak ordering of StructuredDeployments during
heat stack creation on the undercloud. This can cause the deployment which
sends the completion signal back to Heat to happen before all others have
completed, which in turn leads Heat to state the stack is ready while ORC
is still configuring services

The only workaround to this is to wait an unknown amount of time after the
heat stack completes before the system is usable.

This patch prevents the completion signal from being returned early, by
ensuring these are strictly ordered:
   undercloudIronicDeployment (if used)
   undercloudNovaDeployment
   undercloudPassthroughDeployment
   undercloudDeployment

Note: The reference numbering for the undercloud has been removed.
Change-Id: I98499dd54bb907d29cf355fe83b5c285a7375e97

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -319,7 +319,8 @@ resources:
       networks:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
-  99_undercloudDeployment:
+  undercloudDeployment:
+    depends_on: [undercloudPassthroughDeployment]
     type: OS::Heat::StructuredDeployment
     properties:
       config: {get_resource: undercloudConfig}
@@ -354,7 +355,8 @@ resources:
             - - 'http://'
               - {get_attr: [undercloud, networks, ctlplane, 0]}
               - ':8000/v1/waitcondition'
-  00_undercloudPassthroughDeployment:
+  undercloudPassthroughDeployment:
+    depends_on: [undercloudNovaDeployment]
     type: OS::Heat::StructuredDeployment
     properties:
       config: {get_resource: undercloudPassthroughConfig}
