--- a/undercloud-vm-ironic-deploy.yaml
+++ b/undercloud-vm-ironic-deploy.yaml
@@ -12,7 +12,8 @@ parameters:
     type: string
     hidden: true
 resources:
-  01_undercloudNovaDeployment:
+  undercloudNovaDeployment:
+    depends_on: [undercloudIronicDeployment]
     type: OS::Heat::StructuredDeployment
     properties:
       config: {get_resource: undercloudNovaConfig}
@@ -20,7 +21,7 @@ resources:
       signal_transport: NO_SIGNAL
       input_values:
         nova_service_password: {get_param: NovaPassword}
-  02_undercloudIronicDeployment:
+  undercloudIronicDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
       config: {get_resource: undercloudIronicConfig}
