Use VIP for rabbit/keystone and mysql in block-storage.yaml
Previously BlockStorage nodes were using the controller ip instead of the virtual ip to reach rabbit, keystone and mysql.

Change-Id: I23f87511e59d4d3527403b1a81c1b3df65c6a904

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -23,7 +23,7 @@ resources:
       server: {get_resource: BlockStorage0}
       config: {get_resource: BlockStorageConfig}
       input_values:
-        controller_host: {get_attr: [controller0, networks, ctlplane, 0]}
+        controller_virtual_ip: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
         cinder_dsn: {"Fn::Join": ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
       signal_transport: NO_SIGNAL
   BlockStorageConfig:
@@ -33,7 +33,7 @@ resources:
       config:
         admin-password: {get_param: AdminPassword}
         keystone:
-          host: {get_input: controller_host}
+          host: {get_input: controller_virtual_ip}
         cinder:
           db: {get_input: cinder_dsn}
           volume_size_mb:
@@ -43,6 +43,6 @@ resources:
           iscsi-helper:
             get_param: CinderISCSIHelper
         rabbit:
-          host: {get_input: controller_host}
+          host: {get_input: controller_virtual_ip}
           username: {get_param: RabbitUserName}
           password: {get_param: RabbitPassword}
