Replace occurrences of list_join with Fn::Join
When change I6730ffe1e27d952d563c16a9480298fbef9f61fe got merged we
introduced some occurrences of list_join which should have been
migrated to Fn::Join (change I039f57ab39c1fcfc319a7a34265ba4fabf4ccd08)

This caused overcloud CI jobs to fail with:
Property error : allNodesConfig: config Items to join must be strings

This change fixes this by replacing newly introduced occurrences
of list_join with Fn::Join

Change-Id: Ibac193781d31d6f81e955e7b9381e13cfdd0ab1d

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -741,27 +741,27 @@ resources:
               - "\n"
               - Merge::Map:
                   BlockStorage0:
-                    list_join:
+                    Fn::Join:
                     - ' '
                     - - {get_attr: [BlockStorage0, networks, ctlplane, 0]}
                       - {get_attr: [BlockStorage0, show, name]}
-                      - list_join:
+                      - Fn::Join:
                         - '.'
                         - - {get_attr: [BlockStorage0, show, name]}
                           - 'novalocal'
-            - list_join:
+            - Fn::Join:
               - "\n"
               - Merge::Map:
                   SwiftStorage0:
-                    list_join:
+                    Fn::Join:
                     - ' '
                     - - {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
                       - {get_attr: [SwiftStorage0, show, name]}
-                      - list_join:
+                      - Fn::Join:
                         - '.'
                         - - {get_attr: [SwiftStorage0, show, name]}
                           - 'novalocal'
-            - list_join:
+            - Fn::Join:
               - "\n"
               - Merge::Map:
                   controller0:
