MySQL connections via HAProxy should not timeout
With the default 60 second timeout, many services will periodically
log "MySQL has gone away" as HAProxy has closed the connection.

Change-Id: Ied67344fbabcd77def4483be37a4706190ab28a0

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -658,6 +658,9 @@ resources:
               port: 3306
               extra_server_params:
                 - backup
+              options:
+                - timeout client 0
+                - timeout server 0
             - name: nova_ec2
               port: 8773
             - name: nova_osapi
